fix:edit style of maven.md